--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "qrcode": "^1.4.4",
+    "qrcode-terminal": "^0.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "qrcode-terminal": "^0.12.0",
+    "socket.io-client": "^2.3.0",
     "whatsapp-web.js": "^1.8.2"
   },
   "scripts": {
