Configuração inicial layout estrutural responsivo

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "socket.io-client": "^2.3.0",
+    "styled-components": "^5.2.0",
     "whatsapp-web.js": "^1.8.2"
   },
   "scripts": {
