--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,14 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formatjs/intl-relativetimeformat": "^4.5.16",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "formik": "^2.1.5",
+    "base-shell": "^1.2.8",
+    "date-fns": "^2.16.1",
+    "github-markdown-css": "^4.0.0",
+    "intl": "^1.2.5",
+    "intl-locales-supported": "^1.8.12",
+    "material-ui-shell": "^1.1.5",
     "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
     "react": "^16.13.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
+    "react-intl": "^4.7.6",
+    "react-ios-pwa-prompt": "^1.8.0",
+    "react-markdown": "^4.3.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "socket.io-client": "^2.3.0",
